// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots helpers|useExpandable default 1`] = `
.c0 {
  padding: 12px;
}

.c9 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
}

.c13 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c8 {
  font-size: 1.5em;
}

.c25 .c8 {
  font-size: 1.5em;
}

.c26 .c8 {
  font-size: 1.5em;
}

.c27 .c8 {
  font-size: 1.5em;
}

.c28 .c8 {
  font-size: 1.5em;
}

.c29 .c8 {
  font-size: 1.5em;
}

.c30 .c8 {
  font-size: 1.5em;
}

.c31 .c8 {
  font-size: 1.5em;
}

.c32 .c8 {
  font-size: 1.5em;
}

.c33 .c8 {
  font-size: 1.5em;
}

.c34 .c8 {
  font-size: 1.5em;
}

.c35 .c8 {
  font-size: 1.5em;
}

.c36 .c8 {
  font-size: 1.5em;
}

.c37 .c8 {
  font-size: 1.5em;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #4caf50;
  --focus-color: 76,175,80;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c7:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c7:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:active,
.c7.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c7[disabled] {
  pointer-events: none;
}

.c7[disabled]:after {
  display: block;
}

.c7 .c8 {
  font-size: 1.5em;
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
}

.c11:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c11:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c11:active,
.c11.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c11:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c11[disabled] {
  pointer-events: none;
}

.c11[disabled]:after {
  display: block;
}

.c11 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c38 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c39 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c40 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c2:hover,
.c2:focus {
  background-color: #eee;
}

.c3 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c41 .c8 {
  pointer-events: none;
}

.c42 .c8 {
  pointer-events: none;
}

.c1 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c4 {
  margin-left: 40px;
  margin-right: 20px;
  height: 100%;
}

.c4:after {
  position: relative;
  left: -20px;
  top: calc(-100% - 50%);
  border: solid #eee;
  border-width: 0px 0px 1px 0px;
  content: ' ';
  display: block;
  width: 20px;
  height: 100%;
  z-index: -1;
}

.c12 {
  margin-left: 40px;
  margin-right: 20px;
  height: 100%;
}

.c12:after {
  position: relative;
  left: -20px;
  top: calc(-100% - 50%);
  border: solid #eee;
  border-width: 0px 0px 1px 1px;
  content: ' ';
  display: block;
  width: 20px;
  height: 100%;
  z-index: -1;
}

.c5 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c43 .c6 {
  margin-left: 20px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 20px;
  width: 100%;
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <div
      className="c1"
      onScroll={[Function]}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 800,
          "overflow": "auto",
          "position": "relative",
          "width": 800,
          "willChange": "transform",
        }
      }
    >
      <ul
        style={
          Object {
            "height": 8000,
            "pointerEvents": "",
            "width": "100%",
          }
        }
      >
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Ayden
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 80,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Larue
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 160,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Helena
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 240,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Margaret
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 320,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Vernie
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 400,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Hannah
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 480,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Kaci
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 560,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Clinton
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 640,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Mathew
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 720,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Edythe
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 800,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Emerson
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 880,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Bryce
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 960,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Marques
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Storyshots helpers|useExpandable expandedKeys 1`] = `
.c0 {
  padding: 12px;
}

.c9 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
}

.c19 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c29 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c30 .c8 {
  font-size: 1.5em;
}

.c31 .c8 {
  font-size: 1.5em;
}

.c32 .c8 {
  font-size: 1.5em;
}

.c33 .c8 {
  font-size: 1.5em;
}

.c34 .c8 {
  font-size: 1.5em;
}

.c35 .c8 {
  font-size: 1.5em;
}

.c36 .c8 {
  font-size: 1.5em;
}

.c37 .c8 {
  font-size: 1.5em;
}

.c38 .c8 {
  font-size: 1.5em;
}

.c39 .c8 {
  font-size: 1.5em;
}

.c40 .c8 {
  font-size: 1.5em;
}

.c41 .c8 {
  font-size: 1.5em;
}

.c42 .c8 {
  font-size: 1.5em;
}

.c43 .c8 {
  font-size: 1.5em;
}

.c16 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #4caf50;
  --focus-color: 76,175,80;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c16:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c16:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c16:active,
.c16.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c16:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c16[disabled] {
  pointer-events: none;
}

.c16[disabled]:after {
  display: block;
}

.c16 .c8 {
  font-size: 1.5em;
}

.c17 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
}

.c17:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c17:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c17:active,
.c17.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c17:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c17[disabled] {
  pointer-events: none;
}

.c17[disabled]:after {
  display: block;
}

.c17 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #ef5350;
  --focus-color: 239,83,80;
  border-radius: 50%;
  min-width: auto;
  padding: 0;
  width: 2.857142857142857em;
}

.c7:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c7:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:active,
.c7.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c7:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c7[disabled] {
  pointer-events: none;
}

.c7[disabled]:after {
  display: block;
}

.c7 .c8 {
  font-size: 1.5em;
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.7109375em;
  color: #fff;
  line-height: 1.5;
  text-transform: uppercase;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  min-width: 2.5em;
  height: 2.857142857142857em;
  padding: 0 1.5em;
  border: none;
  border-radius: 4px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
  background-color: #999;
  --focus-color: 153,153,153;
  background-color: #fff;
  color: #999;
  box-shadow: 0 0 0 1px #999;
}

.c11:hover {
  box-shadow: inset 10px 10px 999em rgba(0,0,0,0.1);
}

.c11:focus {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.1), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c11:active,
.c11.active {
  box-shadow: inset 0 0 999em rgba(0,0,0,0.2), 0 0 0 4px rgba(var(--focus-color),0.15);
}

.c11:after {
  display: none;
  content: "";
  position: absolute;
  top: -1px;
  right: -1px;
  bottom: -1px;
  left: -1px;
  border-radius: inherit;
  background-color: rgba(255,255,255,0.5);
}

.c11[disabled] {
  pointer-events: none;
}

.c11[disabled]:after {
  display: block;
}

.c11:hover {
  color: #222;
  box-shadow: 0 0 0 1px #222;
}

.c11:focus {
  box-shadow: 0 0 0 1px #999, 0 0 0 5px rgba(var(--focus-color),0.15);
}

.c11 .c8 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c44 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c45 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c46 .c8 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c2:hover,
.c2:focus {
  background-color: #eee;
}

.c3 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c47 .c8 {
  pointer-events: none;
}

.c48 .c8 {
  pointer-events: none;
}

.c1 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c4 {
  margin-left: 40px;
  margin-right: 20px;
  height: 100%;
}

.c4:after {
  position: relative;
  left: -20px;
  top: calc(-100% - 50%);
  border: solid #eee;
  border-width: 0px 0px 1px 0px;
  content: ' ';
  display: block;
  width: 20px;
  height: 100%;
  z-index: -1;
}

.c18 {
  margin-left: 40px;
  margin-right: 20px;
  height: 100%;
}

.c18:after {
  position: relative;
  left: -20px;
  top: calc(-100% - 50%);
  border: solid #eee;
  border-width: 0px 0px 1px 1px;
  content: ' ';
  display: block;
  width: 20px;
  height: 100%;
  z-index: -1;
}

.c12 {
  margin-left: 80px;
  margin-right: 20px;
  height: 100%;
}

.c12:after {
  position: relative;
  left: -20px;
  top: calc(-100% - 50%);
  border: solid #eee;
  border-width: 0px 0px 1px 1px;
  content: ' ';
  display: block;
  width: 20px;
  height: 100%;
  z-index: -1;
}

.c13 {
  margin-left: 120px;
  margin-right: 20px;
  height: 100%;
}

.c13:after {
  position: relative;
  left: -20px;
  top: calc(-100% - 50%);
  border: solid #eee;
  border-width: 0px 0px 1px 1px;
  content: ' ';
  display: block;
  width: 20px;
  height: 100%;
  z-index: -1;
}

.c14 {
  margin-left: 80px;
  margin-right: 20px;
  height: 100%;
}

.c14:after {
  position: relative;
  left: -20px;
  top: calc(-300% - 50%);
  border: solid #eee;
  border-width: 0px 0px 1px 1px;
  content: ' ';
  display: block;
  width: 20px;
  height: 300%;
  z-index: -1;
}

.c15 {
  margin-left: 40px;
  margin-right: 20px;
  height: 100%;
}

.c15:after {
  position: relative;
  left: -20px;
  top: calc(-700% - 50%);
  border: solid #eee;
  border-width: 0px 0px 1px 1px;
  content: ' ';
  display: block;
  width: 20px;
  height: 700%;
  z-index: -1;
}

.c5 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c49 .c6 {
  margin-left: 20px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: 20px;
  width: 100%;
}

<div
  className="c0"
>
  <div
    onKeyDown={[Function]}
  >
    <div
      className="c1"
      onScroll={[Function]}
      style={
        Object {
          "WebkitOverflowScrolling": "touch",
          "direction": "ltr",
          "height": 800,
          "overflow": "auto",
          "position": "relative",
          "width": 800,
          "willChange": "transform",
        }
      }
    >
      <ul
        style={
          Object {
            "height": 8480,
            "pointerEvents": "",
            "width": "100%",
          }
        }
      >
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Ayden
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Collapse all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 80,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c12"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Shaun
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Collapse all children
                  </button>
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Collapse all parents
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 160,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c13"
            >
              <div
                className="c5"
              >
                <div
                  className="c10"
                >
                  Lola
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 240,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c13"
            >
              <div
                className="c5"
              >
                <div
                  className="c10"
                >
                  Travis
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 320,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c14"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c7"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13H5v-2h14v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Kyle
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Collapse all children
                  </button>
                  <button
                    className="c6 c11"
                    onClick={[Function]}
                  >
                    Collapse all parents
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 400,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c13"
            >
              <div
                className="c5"
              >
                <div
                  className="c10"
                >
                  Jaeden
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 480,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c13"
            >
              <div
                className="c5"
              >
                <div
                  className="c10"
                >
                  Yadira
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 560,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c15"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c16"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Larue
                  <button
                    className="c6 c17"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 640,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c18"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c16"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Helena
                  <button
                    className="c6 c17"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 720,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c18"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c16"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Margaret
                  <button
                    className="c6 c17"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 800,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c18"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c16"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Vernie
                  <button
                    className="c6 c17"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 880,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c18"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c16"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Hannah
                  <button
                    className="c6 c17"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="c2"
          onMouseOver={[Function]}
          style={
            Object {
              "height": 80,
              "left": 0,
              "position": "absolute",
              "top": 960,
              "width": "100%",
            }
          }
          tabIndex={-1}
        >
          <div
            className="c3"
          >
            <div
              className="c18"
            >
              <div
                className="c5"
              >
                <button
                  className="c6 c16"
                  onClick={[Function]}
                >
                  <span
                    className="c8 c9"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      strokeWidth="0"
                      style={
                        Object {
                          "color": undefined,
                        }
                      }
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                </button>
                <div
                  className="c10"
                >
                  Kaci
                  <button
                    className="c6 c17"
                    onClick={[Function]}
                  >
                    Expand all children
                  </button>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
